Fixat så att install och get visar loading bar, samt uppdaterat diverse features för MBCLI

--- a/TODO.txt
+++ b/TODO.txt
@@ -43,3 +43,5 @@ mbpm upload MBSearchEngine --installed -d /MBPM_Builds/ --computerdiff
 servern crashar om man försöker ladda upp packet med namn ""
 
 ta bort den gammla "downloadfilelist" och använd bara den nya, gör bland annat så att allt får en fin download bar samt att det inte är lika jobbigt att uppdatera
+
+fixa så att den märker av duplicate exported exeutables, samt att den uppdaterar executabeln bara om den finns
