Uppdaterad format för FileIndexet, supportar nu LastWrite time samt har gjort det mycket enklare att lägga till nya fält på ett forwards och backwards compatible sätt. Nu till att testa det med resten av MBPM och sedan uppdatera på servern

--- a/ProjectDairy/2021-10-19.md
+++ b/ProjectDairy/2021-10-19.md
@@ -1,9 +1,9 @@
-Just nu finns det ett problem med MBPM_FilInfo filformatet som kommer från att nament av filer och directories inte inkluderas i deras hash. Att byta namn på en fil eller directory
-påverkar inte deras hash, vilket innebär att detta inte plockas upp av GetPacketDiff. För att lösa detta kan vi helt enkelt inkludera deras namn i hashen, men detta leder till ett annat problem,
-vilket är att det då inte går att avgöra huruvida en folder har bytt namn utan att byta content. Med folders som har mycket data i sig är det inte optimalt att behöva kopiera allt med enbart ett
-namn byte. En lösning till dettta vore att ha 2 separata hashes, en ContentHash, och en StructureHash. ContentHashen avgör huruvida datan som är sparad är samma, och StructureHashet huruvida 
-strukturen av filsystemet är samma (i kombination med data). ContentHashet har då en annan data kanonisering, som istället sorterar på alla filer/folders content hash, i hashets bokstavsordning.
-Detta gör att byte namn mellan filer inte ändrar ContentHashen. Att flytta filer till olika directories kommer fortfarande att inte kunna upptäckas trivialt, men genom att oavsett vad spara ett
-content hash är det möjligt om det är väldigt mycket data som behöver kopieras att göra en total sökning på objekten i filsystemet. Nackdelen med detta system är såklart att utrymmet blir större.
-Per directory kommer det kräva HashDigest antal extra bytes. Eftersom filer inte har en intern struktur har dem enbart kvar FileHashen. Utöver det la jag till en header till MBPM_FileInfon,
-för att göra det möjlgit att sniffa typen, samt för att hålla det mer forwardscompatiable, med stöd för olika versioner, specificera hash och extensions.
+Just nu finns det ett problem med MBPM_FilInfo filformatet som kommer frï¿½n att nament av filer och directories inte inkluderas i deras hash. Att byta namn pï¿½ en fil eller directory
+pï¿½verkar inte deras hash, vilket innebï¿½r att detta inte plockas upp av GetPacketDiff. Fï¿½r att lï¿½sa detta kan vi helt enkelt inkludera deras namn i hashen, men detta leder till ett annat problem,
+vilket ï¿½r att det dï¿½ inte gï¿½r att avgï¿½ra huruvida en folder har bytt namn utan att byta content. Med folders som har mycket data i sig ï¿½r det inte optimalt att behï¿½va kopiera allt med enbart ett
+namn byte. En lï¿½sning till dettta vore att ha 2 separata hashes, en ContentHash, och en StructureHash. ContentHashen avgï¿½r huruvida datan som ï¿½r sparad ï¿½r samma, och StructureHashet huruvida 
+strukturen av filsystemet ï¿½r samma (i kombination med data). ContentHashet har dï¿½ en annan data kanonisering, som istï¿½llet sorterar pï¿½ alla filer/folders content hash, i hashets bokstavsordning.
+Detta gï¿½r att byte namn mellan filer inte ï¿½ndrar ContentHashen. Att flytta filer till olika directories kommer fortfarande att inte kunna upptï¿½ckas trivialt, men genom att oavsett vad spara ett
+content hash ï¿½r det mï¿½jligt om det ï¿½r vï¿½ldigt mycket data som behï¿½ver kopieras att gï¿½ra en total sï¿½kning pï¿½ objekten i filsystemet. Nackdelen med detta system ï¿½r sï¿½klart att utrymmet blir stï¿½rre.
+Per directory kommer det krï¿½va HashDigest antal extra bytes. Eftersom filer inte har en intern struktur har dem enbart kvar FileHashen. Utï¿½ver det la jag till en header till MBPM_FileInfon,
+fï¿½r att gï¿½ra det mï¿½jlgit att sniffa typen, samt fï¿½r att hï¿½lla det mer forwardscompatiable, med stï¿½d fï¿½r olika versioner, specificera hash och extensions.
