--- a/ProjectDairy/2021-10-23.md
+++ b/ProjectDairy/2021-10-23.md
@@ -1,24 +1,24 @@
-Iden om hur ComputerDiff iden ska implementeras är mer eller mindre färdig. Att ladda ner har alltid kunnat göras rätt transparant sett från användarens sida, men att ladda upp kräver lite mer.
-Tanken är att man egentligen på samma sätt som man laddar ner kan ladda upp med specifik ComputerInfo specificerad, och på serversidan kommer den directory som matchar till den med computerdiff
-matchen att ta hand om filerna, och en separat text fil håller kol på vilka filer som inte ska tas med från den vanliga packeten. Detta gör att det egentligen är rätt enkelt att ladda upp lite
-allt möjligt till den, vilket kan vara en fördel, men samtidigt blir det enkelt väldigt trassligt och helst av allt sak skillnaden var aliten. Därför har jag till upload lagt till att man kan istället
-för att automatiskt upptäcka vilka filer som laddas upp ladda upp en specficerad directory eller fil. Detta går då över FileInfoIgnoren, eftersom det bland annat är tänkt att man ska kunna
-ladda upp builds med det här.På serversidan har ett behov av generell mbpm data kommit fram. Utöver förmåpga att utan att användaren vet hur ha VC och kunna hålla koll på computerdiff, så kommer allt
-specifikt MBPM nu flyttas till MBPM folder. Jag är fortfarande osäker på om egentligen allt borde ligga där, dvs MBPM_FileInfo eller liknande, men eftersom den filen är egentligen inte ens en
-del av packeten så är det okej, och MBPM_PacketInfo är definitivt något som ska ligga i packeten direkt. Tror därför det förmodligen mest kommer vara server grejer där, men är oavsett vad en
-default förbjuden packet att ladda upp, och eventuellt något som inte fås ladda upp alls? Alternativet är att server sparar datan i två steg, en packetdirectory som vanligt, men den faktiska nuvarande
-datan i en fil under, och har VC och diff i samam directory där. Fördelen med detta är att användaren aldrig kan råka ladda upp något som har semantik för Packeten, och det låter även en klarare
-distinktion mellan klient och serversida finnas. .mbpm kommer förmodlign att forstätta vara en folder som är resarverad, så just nu gör det nog ingen skillnad, men kommer nog börja separar funktionalitet
-från data som kan ses i packeten, det ska inte vara något användaren behöver veta. När det kommer till att implementera serversidan av computerdiff har vi ett nytt problem, och det är att VC
-igen behöver has i åtanke, vilket innebär mer saker som den som använder MBPP_Client behöver polla. Tanken är fortfarande att clienten ska kunna användas helt obereonde av transfer protokoll, men även
-att den som använder den inte behöver vet om protkollet alls. MBAuthenticator var ett bra sätt att abstrahera bort identification från  MBPP sidan, och jag funderar nu om man även ska ta in 
-MBPP_UploadConsolidator eller något som ett sätt att hantera uploads. Det gör semnantiken av vad som händer bättre, och minskar mängden konstiga funktioner som behöver kallas och bara har 
-ett specifikt syfte, men en nackdel kan vara att det inte framgår like tydligt när saker förändras. Men eftersom detta ändå är något som händer under ytan är det nog bättre att han en sån klass,
-för då framgår det exakt vilka filder som ändras osv. Detta kan eventuellt ersätta behöver av MBPP clienten att behöva hålla koll på vad packet directoriesen är, detta kan också skötas av funktioenr
-av en klass input, som det är nu är det inga stora problem men kan också bli ett sätt att glra det ännu tydligare exakt vad det som är statefull, och göra det mer justerbart. Oavsett vad kommer 
-jag nog börja med en MBPM_UploadConsolidator eller något i den stilen, har gillat MBAuthenticator funktionalitet och vill testa att göra mer med den här bygg blocks metoden för
+Iden om hur ComputerDiff iden ska implementeras ï¿½r mer eller mindre fï¿½rdig. Att ladda ner har alltid kunnat gï¿½ras rï¿½tt transparant sett frï¿½n anvï¿½ndarens sida, men att ladda upp krï¿½ver lite mer.
+Tanken ï¿½r att man egentligen pï¿½ samma sï¿½tt som man laddar ner kan ladda upp med specifik ComputerInfo specificerad, och pï¿½ serversidan kommer den directory som matchar till den med computerdiff
+matchen att ta hand om filerna, och en separat text fil hï¿½ller kol pï¿½ vilka filer som inte ska tas med frï¿½n den vanliga packeten. Detta gï¿½r att det egentligen ï¿½r rï¿½tt enkelt att ladda upp lite
+allt mï¿½jligt till den, vilket kan vara en fï¿½rdel, men samtidigt blir det enkelt vï¿½ldigt trassligt och helst av allt sak skillnaden var aliten. Dï¿½rfï¿½r har jag till upload lagt till att man kan istï¿½llet
+fï¿½r att automatiskt upptï¿½cka vilka filer som laddas upp ladda upp en specficerad directory eller fil. Detta gï¿½r dï¿½ ï¿½ver FileInfoIgnoren, eftersom det bland annat ï¿½r tï¿½nkt att man ska kunna
+ladda upp builds med det hï¿½r.Pï¿½ serversidan har ett behov av generell mbpm data kommit fram. Utï¿½ver fï¿½rmï¿½pga att utan att anvï¿½ndaren vet hur ha VC och kunna hï¿½lla koll pï¿½ computerdiff, sï¿½ kommer allt
+specifikt MBPM nu flyttas till MBPM folder. Jag ï¿½r fortfarande osï¿½ker pï¿½ om egentligen allt borde ligga dï¿½r, dvs MBPM_FileInfo eller liknande, men eftersom den filen ï¿½r egentligen inte ens en
+del av packeten sï¿½ ï¿½r det okej, och MBPM_PacketInfo ï¿½r definitivt nï¿½got som ska ligga i packeten direkt. Tror dï¿½rfï¿½r det fï¿½rmodligen mest kommer vara server grejer dï¿½r, men ï¿½r oavsett vad en
+default fï¿½rbjuden packet att ladda upp, och eventuellt nï¿½got som inte fï¿½s ladda upp alls? Alternativet ï¿½r att server sparar datan i tvï¿½ steg, en packetdirectory som vanligt, men den faktiska nuvarande
+datan i en fil under, och har VC och diff i samam directory dï¿½r. Fï¿½rdelen med detta ï¿½r att anvï¿½ndaren aldrig kan rï¿½ka ladda upp nï¿½got som har semantik fï¿½r Packeten, och det lï¿½ter ï¿½ven en klarare
+distinktion mellan klient och serversida finnas. .mbpm kommer fï¿½rmodlign att forstï¿½tta vara en folder som ï¿½r resarverad, sï¿½ just nu gï¿½r det nog ingen skillnad, men kommer nog bï¿½rja separar funktionalitet
+frï¿½n data som kan ses i packeten, det ska inte vara nï¿½got anvï¿½ndaren behï¿½ver veta. Nï¿½r det kommer till att implementera serversidan av computerdiff har vi ett nytt problem, och det ï¿½r att VC
+igen behï¿½ver has i ï¿½tanke, vilket innebï¿½r mer saker som den som anvï¿½nder MBPP_Client behï¿½ver polla. Tanken ï¿½r fortfarande att clienten ska kunna anvï¿½ndas helt obereonde av transfer protokoll, men ï¿½ven
+att den som anvï¿½nder den inte behï¿½ver vet om protkollet alls. MBAuthenticator var ett bra sï¿½tt att abstrahera bort identification frï¿½n  MBPP sidan, och jag funderar nu om man ï¿½ven ska ta in 
+MBPP_UploadConsolidator eller nï¿½got som ett sï¿½tt att hantera uploads. Det gï¿½r semnantiken av vad som hï¿½nder bï¿½ttre, och minskar mï¿½ngden konstiga funktioner som behï¿½ver kallas och bara har 
+ett specifikt syfte, men en nackdel kan vara att det inte framgï¿½r like tydligt nï¿½r saker fï¿½rï¿½ndras. Men eftersom detta ï¿½ndï¿½ ï¿½r nï¿½got som hï¿½nder under ytan ï¿½r det nog bï¿½ttre att han en sï¿½n klass,
+fï¿½r dï¿½ framgï¿½r det exakt vilka filder som ï¿½ndras osv. Detta kan eventuellt ersï¿½tta behï¿½ver av MBPP clienten att behï¿½va hï¿½lla koll pï¿½ vad packet directoriesen ï¿½r, detta kan ocksï¿½ skï¿½tas av funktioenr
+av en klass input, som det ï¿½r nu ï¿½r det inga stora problem men kan ocksï¿½ bli ett sï¿½tt att glra det ï¿½nnu tydligare exakt vad det som ï¿½r statefull, och gï¿½ra det mer justerbart. Oavsett vad kommer 
+jag nog bï¿½rja med en MBPM_UploadConsolidator eller nï¿½got i den stilen, har gillat MBAuthenticator funktionalitet och vill testa att gï¿½ra mer med den hï¿½r bygg blocks metoden fï¿½r
 mer avancerade klasser.
 
-Utöver det inser jag mer och mer syftet med en handshake, ett sätt att hålla det mer futureproof, en fast header storlek som det är nu är inte nödvändigtvis hållbart i längden, 
-specifikt tänker jag på om man ska kunna specifica väldigt specifika processorer så man kan få en optimiserad packet. Handshaken kan däremot göras så det är backwards compatible, så får se om 
-det någonsin kommer behövas, speciellt inte nu när väldigt få komponenter som behöver ändras.
+Utï¿½ver det inser jag mer och mer syftet med en handshake, ett sï¿½tt att hï¿½lla det mer futureproof, en fast header storlek som det ï¿½r nu ï¿½r inte nï¿½dvï¿½ndigtvis hï¿½llbart i lï¿½ngden, 
+specifikt tï¿½nker jag pï¿½ om man ska kunna specifica vï¿½ldigt specifika processorer sï¿½ man kan fï¿½ en optimiserad packet. Handshaken kan dï¿½remot gï¿½ras sï¿½ det ï¿½r backwards compatible, sï¿½ fï¿½r se om 
+det nï¿½gonsin kommer behï¿½vas, speciellt inte nu nï¿½r vï¿½ldigt fï¿½ komponenter som behï¿½ver ï¿½ndras.
