--- a/ProjectDairy/2021-10-31.md
+++ b/ProjectDairy/2021-10-31.md
@@ -1,8 +1,8 @@
-Nu har jag fixat så att dem tidigare klasserna ConnectSocket och clientsocket etc har blivit helt abstracta, och implementeras nu med TCPClient och TCPServer istället. Detta var eftersom jag insåg
-att jag ville ha interfacen, och eftersom klassen som hade den interfacen hade implementatinen blev det väldigt konstigt att inherita från den. Dessutom så blev det problem med att inherita frpån den,
-eftersom funktionerna som man ville kalla högre upp hade risken att skapa oändliga loops om dem implementerades med klassen över, och klasserna var också aningen brutna utan virtuell destructor.
-Nui har jag ersatt dem med abstraacta classer, socket och connectsocket. Socket innehåller bara 2 funktioner, IsValid och Close. Close kan alltid finnas, men IsValid har lite konstig semantik. Däremot
-krävs det en distinktion mellan att vara connected, och att ha fått error. Alla sockets kan vara i ett felaktig tillstånd, vilket IsValid visar. Jag tog dessutom bort ClientSocket och ServerSocket.
-Problemet med klasserna nu vara att abstraktionen inte riktigt fyllde en funktion. Speciellt connect kräver att socketen redan innan är konfigurerad, och kan man inte riktigt göra något genrellt utan
-att veta implementationen. Serversocketen kanske kommer kunna få en interface, då att kunna Accepta och överföra en socket kan ha ett syfte, men till dess har jag tagit bort båda klasserna så jag
-kan se till att allt som är just nu är det nya.
+Nu har jag fixat sï¿½ att dem tidigare klasserna ConnectSocket och clientsocket etc har blivit helt abstracta, och implementeras nu med TCPClient och TCPServer istï¿½llet. Detta var eftersom jag insï¿½g
+att jag ville ha interfacen, och eftersom klassen som hade den interfacen hade implementatinen blev det vï¿½ldigt konstigt att inherita frï¿½n den. Dessutom sï¿½ blev det problem med att inherita frpï¿½n den,
+eftersom funktionerna som man ville kalla hï¿½gre upp hade risken att skapa oï¿½ndliga loops om dem implementerades med klassen ï¿½ver, och klasserna var ocksï¿½ aningen brutna utan virtuell destructor.
+Nui har jag ersatt dem med abstraacta classer, socket och connectsocket. Socket innehï¿½ller bara 2 funktioner, IsValid och Close. Close kan alltid finnas, men IsValid har lite konstig semantik. Dï¿½remot
+krï¿½vs det en distinktion mellan att vara connected, och att ha fï¿½tt error. Alla sockets kan vara i ett felaktig tillstï¿½nd, vilket IsValid visar. Jag tog dessutom bort ClientSocket och ServerSocket.
+Problemet med klasserna nu vara att abstraktionen inte riktigt fyllde en funktion. Speciellt connect krï¿½ver att socketen redan innan ï¿½r konfigurerad, och kan man inte riktigt gï¿½ra nï¿½got genrellt utan
+att veta implementationen. Serversocketen kanske kommer kunna fï¿½ en interface, dï¿½ att kunna Accepta och ï¿½verfï¿½ra en socket kan ha ett syfte, men till dess har jag tagit bort bï¿½da klasserna sï¿½ jag
+kan se till att allt som ï¿½r just nu ï¿½r det nya.
