--- a/ProjectDairy/2021-11-14.md
+++ b/ProjectDairy/2021-11-14.md
@@ -1,4 +1,4 @@
-Den största förändringen är inkluderingen av MBPM_CompileInfo.json, ett sätt att automatiskt kompilera andra program definierade med andra typer av kompilerings metoder. Med assimp, cryptopp osv
-insåg jag att det blev rätt jobbigt att behöva manuellt kompilea för varje platform, och eftersom dem ändå är ganska enkla att kompilera insåg jag att jag kunde automatisera det med vissa 
-förutbestämda operation man kan konfiguera. Jag är däremot inte helt säker att CMake metoden är helt konsekvent, så vi får testa och ser hur det går. Utöver det har jag lagt till --help funktionen till
-programmet och fixat så att man kan ladda upp från installerade packets med --installed respektive --allinstalled. Det är huvudsakligen så man kan ladda upp MBPM_Builds för datorn.
+Den stï¿½rsta fï¿½rï¿½ndringen ï¿½r inkluderingen av MBPM_CompileInfo.json, ett sï¿½tt att automatiskt kompilera andra program definierade med andra typer av kompilerings metoder. Med assimp, cryptopp osv
+insï¿½g jag att det blev rï¿½tt jobbigt att behï¿½va manuellt kompilea fï¿½r varje platform, och eftersom dem ï¿½ndï¿½ ï¿½r ganska enkla att kompilera insï¿½g jag att jag kunde automatisera det med vissa 
+fï¿½rutbestï¿½mda operation man kan konfiguera. Jag ï¿½r dï¿½remot inte helt sï¿½ker att CMake metoden ï¿½r helt konsekvent, sï¿½ vi fï¿½r testa och ser hur det gï¿½r. Utï¿½ver det har jag lagt till --help funktionen till
+programmet och fixat sï¿½ att man kan ladda upp frï¿½n installerade packets med --installed respektive --allinstalled. Det ï¿½r huvudsakligen sï¿½ man kan ladda upp MBPM_Builds fï¿½r datorn.
